--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,3 +19,29 @@ h2 {
 .rating span {
     margin: 0.1rem;
 }
+
+
+/* carousel */
+.carousel-item-next,
+.carousel-item-prev,
+.carosuel-item.active {
+    display: felx
+}
+
+.carousel-caption {
+    position: absolute;
+    top: 0;
+}
+
+.carousel-caption h3 {
+    color: rgb(247, 0, 255);
+}
+
+.carousel img {
+    height: 400px;
+    margin-left: 25%;
+}
+
+.carousel a {
+    margin: 0 auto;
+}
